# yew-webapp

./: Cargo.toml  LICENSE-MIT  README.md  index.html
src/: main.rs
