[package]
name = "yew-webapp-ngs"
version = "0.1.0"
edition = "2023"
description = "yew-webapp"
readme = "README.md"
repository = "https://github.com/NGsHjodra/yew-webapp"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
